# bitrader

./: .gitmodules  CMakeLists.txt  README.md  bitrader.cpp  telegram.cpp
include/: telegram.h
src/: bitrader.cpp  telegram.cpp  telegram_bot.cpp
